--- a/app/scripts/views/kasittelija/hakemus.html
+++ b/app/scripts/views/kasittelija/hakemus.html
@@ -85,8 +85,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label>
-                        <input type="checkbox" ng-model="alv">
-                        Haluan katsoa arvoja arvonlisäverollisina.
+                        <input type="checkbox" ng-model="alv"><span>Haluan katsoa arvoja arvonlisäverollisina.</span>
                     </label>
                 </div>
             </div>
@@ -116,7 +115,7 @@
         </div>
         <div class="col-md-3">
             <div class="pull-right">
-                <h4>{{sumHaettavaAvustus() | currency:"&euro;"}}</h4>
+                <h4>{{sumHaettavaAvustus() | currency:"&euro;"}} (sis. alv)</h4>
             </div>
         </div>
     </div>
