--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -24,3 +24,4 @@
 @import '../scripts/components/formRow'
 @import '../scripts/components/form'
 @import '../scripts/components/avustuskohde'
+@import '../scripts/components/userDropdown'
