--- a/app/scripts/components/formSection/index.styl
+++ b/app/scripts/components/formSection/index.styl
@@ -1,7 +1,8 @@
 .form-section
+  clearfix()
+  margin-bottom: 2em
   h3
     padding: 0
-    margin: 2em 0 1em 0
+    margin: 1em 0 1em 0
     padding-bottom: 0.5em
-
-  margin-bottom: 2em
+    font-weight: 500
