--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -25,3 +25,4 @@
 @import '../scripts/components/form'
 @import '../scripts/components/avustuskohde'
 @import '../scripts/components/userDropdown'
+@import '../scripts/components/ohje'
