--- a/app/styles/_variables.styl
+++ b/app/styles/_variables.styl
@@ -7,3 +7,11 @@ height = {
   navbar: 50px
 }
 sidebarWidth = 250px
+
+clearfix()
+  &:before,
+  &:after
+    content " "
+    display table
+  &:after
+    clear both
