--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -5,6 +5,9 @@
 @import '_variables'
 @import '_components'
 
+h1
+  font-size: 32px
+
 h3
   font-size: 18px
   margin-bottom: 20px
@@ -83,11 +86,6 @@ textarea
   font-size: 14px
   margin-bottom: 15px
   padding: 15px
-.hakemus-lisatietoa-teksti
-  margin-top: 0px
-  line-height: 1
-  font-size: 14px
-  margin-bottom: 0px
 .hakemus-lisatietoa-otsake
   margin-top: 8px
   font-weight: bold
@@ -213,7 +211,7 @@ textarea
 
 .uusihakemuskausi
   border-style: dashed
-  border-width: 4px
+  border-width: 3px
   border-radius: 4px
   color: #0067ce
   margin-bottom: 30px
