--- a/app/scripts/views/hakija/hakemus.html
+++ b/app/scripts/views/hakija/hakemus.html
@@ -58,16 +58,8 @@
       <div ng-show="paatosOlemassa() && (onMaksatushakemus1() || onMaksatushakemus2())">
         <div class="row">
           <div class="col-md-12">
-            <h3>
-              MYÖNNETTY AVUSTUS AJALLE {{ajankohta}}{{vuosi}}: <b>{{paatos.myonnettyavustus/2 | currency:"&euro;"}}</b>
-              <a href=""
-                 class="top"
-                 title=""
-                 data-toggle="tooltip"
-                 data-placement="top"
-                 data-original-title="Avustus vuodelle {{vuosi}}: {{paatos.myonnettyavustus| currency:'&euro;'}}">
-              </a>
-            </h3>
+            <h3>MYÖNNETTY AVUSTUS AJALLE {{ajankohta}}{{vuosi}}</h3>
+            <h4>{{paatos.myonnettyavustus/2 | currency:"&euro;"}}</h4>
           </div>
         </div>
       </div>
